--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "light-server": "^2.9.1",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
   }
